# RL-PlayGround

./: .gitignore  drone-scene.md  example.py  pyproject.toml  python_control_drone.py  setup-unity.md  train.sh  train_dqn.py
.claude/: settings.local.json
docs/: architecture.md  connect-scene.md  drone-scene.md  setup-unity.md
drone-simulator/Assets/ML-Agents/Timers/: SampleScene_timers.json
drone-simulator/Assets/Scenes/: SampleScene.unity
drone-simulator/Assets/Scripts/: Drone Controller.cs  DroneAgent.cs  DroneCollisionHandler.cs  DroneFollowCamera.cs  agent.json
drone-simulator/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
drone-simulator/Assets/_Recovery/: 0.unity
drone-simulator/ProjectSettings/: ProjectSettings.asset
