[project]
name = "rl-playground"
version = "0.1.0"
description = "Unity ML-Agents + Stable-Baselines3 playground"
readme = "README.md"
requires-python = ">=3.10.1,<=3.10.12"

dependencies = [
    "mlagents==1.1.0",
    "mlagents-envs==1.1.0",

    # Required by ML-Agents
    "numpy>=1.23.5,<1.24.0",

    # Avoid gym==0.21 build failure
    "gym==0.26.2",

    # Compatible with SB3 2.7.0
    "gymnasium>=0.29.1,<1.3.0",
    "stable-baselines3==2.7.0",

    # SB3 2.7.0 requires torch>=2.3,<3.0
    "torch>=2.3,<3.0",
]